IMP: Cloud rendering has been improved. ADD: ZERNStageAtmosphere managing atmospheric phenomena has been added to ZERenderer module. CHG: ZEAtmosphere module has been revised to be rendered in stage atmosphere. IMP: Fog rendering has been implemented as post-process.
svn path=/branches/v0.6.2-Graphics/; revision=2013

--- a/Source/ZEEngine/ZERenderer/CMakeLists.txt
+++ b/Source/ZEEngine/ZERenderer/CMakeLists.txt
@@ -121,6 +121,8 @@ ze_add_source(ZERNStageResolving.h 					Sources Headers ZEMC)
 ze_add_source(ZERNStageResolving.cpp				Sources)
 ze_add_source(ZERNStageRenderDepth.h 				Sources Headers ZEMC)
 ze_add_source(ZERNStageRenderDepth.cpp				Sources)
+ze_add_source(ZERNStageAtmosphere.h 				Sources Headers ZEMC)
+ze_add_source(ZERNStageAtmosphere.cpp				Sources)
 
 ze_add_library(TARGET ZERenderer 
 	SOURCES ${Sources}
