FIX: Crach in ZEDPropertyEditor has been fixed. ADD: ZEDObjectEvent has been added to ZEditor. FIX: ZEDPropertyEditor has been optimized. FIX: Many bug fixes and improvements have been done on ZEDObjectBrowser. CHG: QObject::blockSignals have been replaced with QSignalBlocker.
svn path=/branches/v0.6.5-Editor/; revision=2027

--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -40,7 +40,7 @@ ze_add_source(ZEDCore.h									Sources)
 ze_add_source(ZEDModule.cpp								Sources)
 ze_add_source(ZEDModule.h								Sources)
 ze_add_source(ZEDObjectWrapper.cpp						Sources)
-ze_add_source(ZEDObjectWrapper.h						Sources)
+ze_add_source(ZEDObjectWrapper.h						Sources ZEMC)
 ze_add_source(ZEDEvent.cpp								Sources)
 ze_add_source(ZEDEvent.h								Sources ZEMC)
 ze_add_source(ZEDComponent.cpp							Sources)
