FIX: Memory corruption crash while ZEMetaCompiler exiting has been fixed. FIX: ZEMetaCompiler method overload logic has been fixed. FIX: ZEType comperison bug has been fixed. FIX: Many bug fixes and improvements have been made on attribute facilities of ZEMetaCompiler. CHG: ZE_ATTRIBUTE_0 and siblings have been removed infavor of unified ZE_META_ATTRIBUTE. CHG: ZE_META_ tag has been added to ZEMeta related macros suchas ZE_META_ENUMERATOR_DECLARATION, ZE_META_CLASS_DEFINITION and etc. CHG: New ZEMTDeclaration class, which is unified interface for ZEClass and ZEEnumerator (In the future ZEProperty and ZEMethod will be also added) has been added. CHG: All attribute mechanims has been moved from ZEClass to ZEMTDeclaration. ADD: Attribute support has been added to ZEEnumerator. CHG: ZEBuiltIn has been renamed to ZEFundamental. CHG: ZEProvider has been refactored and improved. FIX: ZEMetaCompiler.exe dependency problem in CMake scripts has been fixed. ADD: ZEGUID::Zero static constant variable has been added. ADD: ZEMetaCompile has been modified to add version and timestamp information to its generated files. CHG: Tools/ZEMetaCompiler.exe has been updated to latest revision. ADD: Class flags helper functions IsAbstract, IsFundamental, IsCloneable and etc has been added to ZEClass. CHG: ZEDObjectTree item adding and removing (Update) mechanims has been rewritten from strach. ADD: Initial drag and drop support have been added to ZEDObjectBrowser, ZEDClassBrowser and ZEDAssetBrowser. CHG: ZEDPropertyOperation has been moved to ZEDCore. ADD: ZEDCreateOperation has been added. (Not functional) ADD: ZEDDeleteOperation has been added. ADD: ZEDRelocateOperation has been added.
svn path=/branches/v0.6.5-Editor/; revision=2039

--- a/Source/ZECodeUtilities/ZEMetaCompiler/CMakeLists.txt
+++ b/Source/ZECodeUtilities/ZEMetaCompiler/CMakeLists.txt
@@ -43,6 +43,7 @@ ze_add_source(ZEMCContext.cpp							Sources)
 ze_add_source(ZEMCContext.h								Sources)
 ze_add_source(ZEMCGenerator.cpp							Sources)
 ze_add_source(ZEMCGenerator.h							Sources)
+ze_add_source(ZEMCGeneratorDeclaration.cpp				Sources)
 ze_add_source(ZEMCGeneratorEnumerator.cpp				Sources)
 ze_add_source(ZEMCGeneratorClass.cpp					Sources)
 ze_add_source(ZEMCGeneratorClassProperty.cpp			Sources)
