--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -39,8 +39,6 @@ ze_add_source(ZEDCore.cpp								Sources)
 ze_add_source(ZEDCore.h									Sources)
 ze_add_source(ZEDModule.cpp								Sources)
 ze_add_source(ZEDModule.h								Sources)
-ze_add_source(ZEDObjectWrapper.cpp						Sources)
-ze_add_source(ZEDObjectWrapper.h						Sources ZEMC)
 ze_add_source(ZEDEvent.cpp								Sources)
 ze_add_source(ZEDEvent.h								Sources ZEMC)
 ze_add_source(ZEDComponent.cpp							Sources)
@@ -50,6 +48,22 @@ ze_add_source(ZEDOperation.cpp							Sources)
 ze_add_source(ZEDOperation.h							Sources)
 ze_add_source(ZEDOperationManager.cpp					Sources)
 ze_add_source(ZEDOperationManager.h						Sources)
+
+ze_add_source(ZEDObjectWrapper.cpp						Sources)
+ze_add_source(ZEDObjectWrapper.h						Sources ZEMC)
+ze_add_source(ZEDObjectEvent.cpp						Sources)
+ze_add_source(ZEDObjectEvent.h							Sources ZEMC)
+ze_add_source(ZEDObjectManager.cpp						Sources)
+ze_add_source(ZEDObjectManager.h						Sources)
+
+ze_add_source(ZEDCreateOperation.cpp					Sources)
+ze_add_source(ZEDCreateOperation.h						Sources)
+ze_add_source(ZEDDeleteOperation.cpp					Sources)
+ze_add_source(ZEDDeleteOperation.h						Sources)
+ze_add_source(ZEDRelocateOperation.cpp					Sources)
+ze_add_source(ZEDRelocateOperation.h					Sources)
+ze_add_source(ZEDPropertyOperation.cpp					Sources)
+ze_add_source(ZEDPropertyOperation.h					Sources)
 
 ze_add_source(ZEDTransformationManager.cpp				Sources)
 ze_add_source(ZEDTransformationManager.h				Sources)
