CHG: ZEDCore has been renamed to ZEDEditorCore; ADD: ZEDEditor, which is the center class for editors, has been added. REM: ZEDModule has been removed infavor of ZEDEditor. CHG: ZEDSceneWrapper and ZEDEntityWrapper has been moved to ZEDSceneEditor. ADD: ZEDSceneEditor has been added. ADD: ZEDMenu has been added. ADD: ZEDToolbar has been added. CHG: ZEDSelectionToolbar and ZEDTransformationToolbar has been revised and improved. FIX: Already defined macro compile warnings in ZEDAngle has been fixed. ADD: Extended state management mechanism has been added to ZEInitializable. ADD: ZEInitializable has been made ZEObject aware. ADD: İnitialization and deinitialization errors and warnings has been added to ZEInitializable. CHG: ZEDUIManager has been revised and improved. ADD: Missing ZE_OBJECT macros and ZEMC CMake flags has been added to ZEDEditor.
svn path=/branches/v0.6.5-Editor/; revision=2046

--- a/Source/ZEditor/CMakeLists.txt
+++ b/Source/ZEditor/CMakeLists.txt
@@ -36,22 +36,23 @@
 cmake_minimum_required (VERSION 2.8)
 
 project (ZEditor)
-ze_set_project_folder("ZEditor")
+ze_set_project_folder("ZEDEditor")
 
 find_package(Qt5 COMPONENTS Widgets)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(ZEDCore)
-add_subdirectory(ZEDUserInterface)
 add_subdirectory(ZEDConsole)
+add_subdirectory(ZEDUserInterface)
+add_subdirectory(ZEDSceneEditor)
 
 ze_add_source(ZEDMain.cpp		Sources)
 
-ze_add_executable(TARGET ZEditor 
+ze_add_executable(TARGET ZEDEditor 
 	SOURCES ${Sources}
-	LIBS ZEEngine ZEDCore ZEDUserInterface ZETrainIGModule)
+	LIBS ZEEngine ZEDSceneEditor ZETrainIGModule)
 
-qt5_use_modules(ZEditor Widgets)
+qt5_use_modules(ZEDEditor Widgets)
 
-ze_meta_register(LIBS ZEDCore ZETrainIGModule)
+ze_meta_register(LIBS ZEDCore ZEDUserInterface ZEDSceneEditor ZETrainIGModule)
