--- a/Source/ZEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEditor/ZEDCore/CMakeLists.txt
@@ -35,45 +35,45 @@
 
 cmake_minimum_required(VERSION 2.8)
 
-ze_add_source(ZEDCore.cpp								Sources)
-ze_add_source(ZEDCore.h									Sources)
-ze_add_source(ZEDModule.cpp								Sources)
-ze_add_source(ZEDModule.h								Sources)
+ze_add_source(ZEDEditorCore.cpp							Sources)
+ze_add_source(ZEDEditorCore.h							Sources ZEMC)
+ze_add_source(ZEDEditor.cpp								Sources)
+ze_add_source(ZEDEditor.h								Sources ZEMC)
 ze_add_source(ZEDEvent.cpp								Sources)
 ze_add_source(ZEDEvent.h								Sources ZEMC)
 ze_add_source(ZEDComponent.cpp							Sources)
-ze_add_source(ZEDComponent.h							Sources)
+ze_add_source(ZEDComponent.h							Sources ZEMC)
 
 ze_add_source(ZEDOperation.cpp							Sources)
-ze_add_source(ZEDOperation.h							Sources)
+ze_add_source(ZEDOperation.h							Sources ZEMC)
 ze_add_source(ZEDOperationManager.cpp					Sources)
-ze_add_source(ZEDOperationManager.h						Sources)
+ze_add_source(ZEDOperationManager.h						Sources ZEMC)
 
 ze_add_source(ZEDObjectWrapper.cpp						Sources)
 ze_add_source(ZEDObjectWrapper.h						Sources ZEMC)
 ze_add_source(ZEDObjectEvent.cpp						Sources)
 ze_add_source(ZEDObjectEvent.h							Sources ZEMC)
 ze_add_source(ZEDObjectManager.cpp						Sources)
-ze_add_source(ZEDObjectManager.h						Sources)
+ze_add_source(ZEDObjectManager.h						Sources ZEMC)
 
 ze_add_source(ZEDCreateOperation.cpp					Sources)
-ze_add_source(ZEDCreateOperation.h						Sources)
+ze_add_source(ZEDCreateOperation.h						Sources ZEMC)
 ze_add_source(ZEDDeleteOperation.cpp					Sources)
-ze_add_source(ZEDDeleteOperation.h						Sources)
+ze_add_source(ZEDDeleteOperation.h						Sources ZEMC)
 ze_add_source(ZEDRelocateOperation.cpp					Sources)
-ze_add_source(ZEDRelocateOperation.h					Sources)
+ze_add_source(ZEDRelocateOperation.h					Sources ZEMC)
 ze_add_source(ZEDPropertyOperation.cpp					Sources)
-ze_add_source(ZEDPropertyOperation.h					Sources)
+ze_add_source(ZEDPropertyOperation.h					Sources ZEMC)
 
 ze_add_source(ZEDTransformationManager.cpp				Sources)
-ze_add_source(ZEDTransformationManager.h				Sources)
+ze_add_source(ZEDTransformationManager.h				Sources ZEMC)
 ze_add_source(ZEDTransformationEvent.cpp				Sources)
 ze_add_source(ZEDTransformationEvent.h					Sources ZEMC)
 ze_add_source(ZEDTransformationOperation.cpp			Sources)
-ze_add_source(ZEDTransformationOperation.h				Sources)
+ze_add_source(ZEDTransformationOperation.h				Sources ZEMC)
 
 ze_add_source(ZEDSelectionManager.cpp					Sources)
-ze_add_source(ZEDSelectionManager.h						Sources)
+ze_add_source(ZEDSelectionManager.h						Sources ZEMC)
 ze_add_source(ZEDSelectionEvent.cpp						Sources)
 ze_add_source(ZEDSelectionEvent.h						Sources ZEMC)
 
@@ -82,18 +82,15 @@ ze_add_source(ZEDViewport.h								Sources QtMocs)
 ze_add_source(ZEDViewportEvent.cpp						Sources)
 ze_add_source(ZEDViewportEvent.h						Sources ZEMC)
 ze_add_source(ZEDViewportManager.cpp					Sources)
-ze_add_source(ZEDViewportManager.h						Sources)
+ze_add_source(ZEDViewportManager.h						Sources ZEMC)
 ze_add_source(ZEDViewportController.cpp					Sources)
-ze_add_source(ZEDViewportController.h					Sources)
+ze_add_source(ZEDViewportController.h					Sources ZEMC)
 
 ze_add_source(ZEDGizmo.cpp								Sources)
-ze_add_source(ZEDGizmo.h								Sources)
+ze_add_source(ZEDGizmo.h								Sources ZEMC)
 ze_add_source(ZEDGrid.cpp								Sources)
 ze_add_source(ZEDGrid.h									Sources ZEMC)
-ze_add_source(ZEDSceneWrapper.cpp						Sources)
-ze_add_source(ZEDSceneWrapper.h							Sources ZEMC)
-ze_add_source(ZEDEntityWrapper.cpp						Sources)
-ze_add_source(ZEDEntityWrapper.h						Sources ZEMC)
+
 
 qt5_wrap_cpp (QtMocFiles ${QtMocs})
 qt5_wrap_ui (QtUIFiles ${QtUI})
