CHG: ZEDViewport has been revised. CHG: ZEDSceneEditor has been revised. CHG: ZEATAtmosphere module has been added to meta compiler. FIX: Rendering interior room with callback function has been fixed on ZEInteriorRoom. FIX: Getting accumulation texture from stage hdr has been fixed on ZERNStageHDR.
svn path=/trunk/; revision=2073

--- a/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
+++ b/Source/ZEEngine/ZEAtmosphere/CMakeLists.txt
@@ -36,11 +36,11 @@
 cmake_minimum_required(VERSION 2.8)
 
 ze_add_source(ZEATAtmosphere.cpp			Sources)
-ze_add_source(ZEATAtmosphere.h				Sources Headers)
+ze_add_source(ZEATAtmosphere.h				Sources Headers ZEMC)
 ze_add_source(ZEATSun.cpp					Sources)
-ze_add_source(ZEATSun.h						Sources Headers)
+ze_add_source(ZEATSun.h						Sources Headers ZEMC)
 ze_add_source(ZEATMoon.cpp					Sources)
-ze_add_source(ZEATMoon.h					Sources Headers)
+ze_add_source(ZEATMoon.h					Sources Headers ZEMC)
 ze_add_source(ZEATPeriodicTerms.cpp			Sources)
 ze_add_source(ZEATPeriodicTerms.h			Sources Headers)
 ze_add_source(ZEATCommon.cpp				Sources)
@@ -48,11 +48,11 @@ ze_add_source(ZEATCommon.h					Sources Headers)
 ze_add_source(ZEATAstronomy.cpp				Sources)
 ze_add_source(ZEATAstronomy.h				Sources Headers)
 ze_add_source(ZEATFog.cpp					Sources)
-ze_add_source(ZEATFog.h						Sources Headers)
+ze_add_source(ZEATFog.h						Sources Headers ZEMC)
 ze_add_source(ZEATCloud.cpp					Sources)
-ze_add_source(ZEATCloud.h					Sources Headers)
+ze_add_source(ZEATCloud.h					Sources Headers ZEMC)
 ze_add_source(ZEATSkyBox.cpp				Sources)
-ze_add_source(ZEATSkyBox.h					Sources Headers)
+ze_add_source(ZEATSkyBox.h					Sources Headers ZEMC)
 
 ze_add_library(TARGET ZEAtmosphere 
 	ZEMC ${ZEMC}
