ADD: New, Open, Close SaveAs and similar editor actions have been implemented. ADD: New ZEDEditorEvent has been added. MOD: Many fixes and improvements have been made on ZEDMenu. FIX: Memory corruption on ZEEntity and ZEScene destruction have been fixed. ADD: ZEDTransformationEvent has been implemented. ADD: ZED_XXX_MANAAGER_STATE_CHANGED events have been implemented.
svn path=/trunk/; revision=2076

--- a/Source/ZEDEditor/ZEDCore/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDCore/CMakeLists.txt
@@ -39,6 +39,8 @@ ze_add_source(ZEDEditorCore.cpp							Sources)
 ze_add_source(ZEDEditorCore.h							Sources ZEMC)
 ze_add_source(ZEDEditor.cpp								Sources)
 ze_add_source(ZEDEditor.h								Sources ZEMC)
+ze_add_source(ZEDEditorEvent.cpp						Sources)
+ze_add_source(ZEDEditorEvent.h							Sources ZEMC)
 ze_add_source(ZEDEvent.cpp								Sources)
 ze_add_source(ZEDEvent.h								Sources ZEMC)
 ze_add_source(ZEDComponent.cpp							Sources)
