--- a/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
+++ b/Source/ZEDEditor/ZEDUserInterface/CMakeLists.txt
@@ -40,7 +40,7 @@ ze_add_source(ZEDUserInterfaceComponent.h				Sources ZEMC QtMocs)
 ze_add_source(ZEDWindow.cpp								Sources)
 ze_add_source(ZEDWindow.h								Sources ZEMC QtMocs)
 ze_add_source(ZEDMenu.cpp								Sources)
-ze_add_source(ZEDMenu.h									Sourcesr)
+ze_add_source(ZEDMenu.h									Sources QtMocs)
 ze_add_source(ZEDToolbar.cpp							Sources)
 ze_add_source(ZEDToolbar.h								Sources ZEMC QtMocs)
 ze_add_source(ZEDMainWindow.cpp							Sources)
