FIX: ze_meta.cmake compile definitions and include directory bugs have been fixed. FIX: ze_mata.cmake WIN32 macro problem has been fixed. REM: ZEExtension, ZEExtensionManager, ZEPlugin and ZEPluginManager have removed in favor of ZEMeta. CHG: ZEModule system has been moved to ZEMeta system. REM: ZEBase has been removed in favor of ZEInitializable. CHG: ZEModule has been moved to ZEInitializable. ADD: New ZEDestroyable class, which is used for unifying object destruction and deffered destruction, has bee added. REM: Unused sensor input modules ZESensics, ZEISenseInput, ZEVectorNav, ZEVirtualInput, XSens and ZEVRPNInputModule have been removed.
svn path=/trunk/; revision=2080

--- a/CMake/CMakeLists.txt
+++ b/CMake/CMakeLists.txt
@@ -45,6 +45,7 @@ ze_add_cmake_project(CMakeScripts
 		ze_merge_libraries.cmake
 		ze_merge_libraries_unix.cmake.in
 		ze_meta.cmake
+		ze_file_compiler.cmake
 		ze_platform.cmake
 		ze_static_check.cmake
 		ze_symbol_server.cmake
