--- a/RunDir/options.ini
+++ b/RunDir/options.ini
@@ -4,13 +4,20 @@ LogFileEnabled = true
 LogFilePath = #S:/Logs/ZinekIG-{1}-{0}.log
 LogFileMinimumLevel = Debug
 
-[ModuleManager]
-ZEGRGraphicsModule = ZED11Module
-ZEInputModule = ZEInputModule
-ZESoundModule = ZEALModule
-ZENetworkModule = ZEWinNetwork
-ZEPhysicsModule = ZEPhysXModule
-ZEGameModule = ZETestGame
+[Graphics]
+ScreenWidth = 640
+ScreenHeight = 480
+FullScreen = false
+VerticalSync = false
+SampleCount = 1
+AnisotropicFilter = 1
+ShaderQuality = 5
+TextureQuality = 4
+ModelQuality = 5
+PostEffectQuality = 5
+HDRQuality = 5
+ShadowQuality = 1
+LightQuantity = 1
 
 [Sound]
 DeviceId = 0
@@ -23,4 +30,12 @@ DialogVolume = 100
 MusicVolume = 100
 VideoVolume = 100
 PlayerCommVolume = 100
+
+[ZECore]
+ZEGRGraphicsModule = ZED11Module
+ZEInputModule = ZEInputModule
+ZESoundModule = ZEALModule
+ZENetworkModule = ZEWinNetwork
+ZEPhysicsModule = ZEPhysXModule
+ZEGameModule = ZETestGame
 
