--- a/Source/ZEFoundation/CMakeLists.txt
+++ b/Source/ZEFoundation/CMakeLists.txt
@@ -60,45 +60,49 @@ add_subdirectory(ZEMeta)
 add_subdirectory(ZEPointer)
 add_subdirectory(ZEITIntegrity)
 
-ze_add_source(ZEAutoExp.txt				Sources Headers)
-ze_add_source(ZEData.h 					Sources Headers)
-ze_add_source(ZEData.cpp 				Sources)
-ze_add_source(ZEDLL.h 					Sources Headers)
-ze_add_source(ZEDLL.cpp 				Sources)
-ze_add_source(ZECommon.h 				Sources Headers)
-ze_add_source(ZECommon.cpp 				Sources)
-ze_add_source(ZEGUID.h 					Sources Headers)
-ze_add_source(ZEGUID.cpp 				Sources)
-ze_add_source(ZEGUIDTests.cpp			Tests)
-ze_add_source(ZETypes.h 				Sources Headers)
-ze_add_source(ZETypes.cpp 				Sources)
-ze_add_source(ZEEndian.h 				Sources Headers)
-ze_add_source(ZEEndian.cpp 				Sources)
-ze_add_source(ZEEndianTests.cpp			Tests)
-ze_add_source(ZESwap.h 					Sources Headers)
-ze_add_source(ZESwap.cpp 				Sources)
-ze_add_source(ZEError.h 				Sources Headers)
-ze_add_source(ZEError.cpp 				Sources)
-ze_add_source(ZELog.h					Sources Headers)
-ze_add_source(ZELog.cpp					Sources)
-ze_add_source(ZEPacking.h 				Sources Headers)
-ze_add_source(ZEPacking.cpp 			Sources)
-ze_add_source(ZERandom.h 				Sources Headers)
-ze_add_source(ZERandom.cpp 				Sources)
-ze_add_source(ZERandomTests.cpp			Tests)
-ze_add_source(ZETimeCounter.h			Headers)
-ze_add_source(ZETimeCounter.cpp			Sources)
-ze_add_source(ZETimeCounterTests.cpp	Tests)
-ze_add_source(ZETimeStamp.h				Headers)
-ze_add_source(ZETimeStamp.cpp			Sources)
-ze_add_source(ZEBase64.h				Sources Headers)
-ze_add_source(ZEBase64.cpp				Sources)
-ze_add_source(ZEVersion.cpp				Sources)
-ze_add_source(ZEVersion.h				Sources Headers)
-ze_add_source(ZEInitializable.cpp		Sources)
-ze_add_source(ZEInitializable.h			Sources Headers)
-ze_add_source(ZEEncryption.cpp			Sources)
-ze_add_source(ZEEncryption.h			Sources Headers)
+ze_add_source(ZEAutoExp.txt						Sources Headers)
+ze_add_source(ZEData.h 							Sources Headers)
+ze_add_source(ZEData.cpp 						Sources)
+ze_add_source(ZEDLL.h 							Sources Headers)
+ze_add_source(ZEDLL.cpp 						Sources)
+ze_add_source(ZECommon.h 						Sources Headers)
+ze_add_source(ZECommon.cpp 						Sources)
+ze_add_source(ZEDestroyable.cpp					Sources Headers)
+ze_add_source(ZEDestroyable.h					Sources)
+ze_add_source(ZEDestroyableCollector.cpp		Sources Headers)
+ze_add_source(ZEDestroyableCollector.h			Sources)
+ze_add_source(ZEGUID.h 							Sources Headers)
+ze_add_source(ZEGUID.cpp 						Sources)
+ze_add_source(ZEGUIDTests.cpp					Tests)
+ze_add_source(ZETypes.h 						Sources Headers)
+ze_add_source(ZETypes.cpp 						Sources)
+ze_add_source(ZEEndian.h 						Sources Headers)
+ze_add_source(ZEEndian.cpp 						Sources)
+ze_add_source(ZEEndianTests.cpp					Tests)
+ze_add_source(ZESwap.h 							Sources Headers)
+ze_add_source(ZESwap.cpp 						Sources)
+ze_add_source(ZEError.h 						Sources Headers)
+ze_add_source(ZEError.cpp 						Sources)
+ze_add_source(ZELog.h							Sources Headers)
+ze_add_source(ZELog.cpp							Sources)
+ze_add_source(ZEPacking.h 						Sources Headers)
+ze_add_source(ZEPacking.cpp 					Sources)
+ze_add_source(ZERandom.h 						Sources Headers)
+ze_add_source(ZERandom.cpp 						Sources)
+ze_add_source(ZERandomTests.cpp					Tests)
+ze_add_source(ZETimeCounter.h					Headers)
+ze_add_source(ZETimeCounter.cpp					Sources)
+ze_add_source(ZETimeCounterTests.cpp			Tests)
+ze_add_source(ZETimeStamp.h						Headers)
+ze_add_source(ZETimeStamp.cpp					Sources)
+ze_add_source(ZEBase64.h						Sources Headers)
+ze_add_source(ZEBase64.cpp						Sources)
+ze_add_source(ZEVersion.cpp						Sources)
+ze_add_source(ZEVersion.h						Sources Headers)
+ze_add_source(ZEInitializable.cpp				Sources)
+ze_add_source(ZEInitializable.h					Sources Headers)
+ze_add_source(ZEEncryption.cpp					Sources)
+ze_add_source(ZEEncryption.h					Sources Headers)
 
 ze_add_library(TARGET ZEFoundation
 	COMBINE
