--- a/Source/ZEModules/ZEOpenAL/CMakeLists.txt
+++ b/Source/ZEModules/ZEOpenAL/CMakeLists.txt
@@ -35,12 +35,12 @@
 
 cmake_minimum_required (VERSION 2.8)
 
+ze_add_source(ZEALModule.cpp				Sources)
+ze_add_source(ZEALModule.h					Sources ZEMC)
 ze_add_source(ZEALComponentBase.cpp			Sources)
 ze_add_source(ZEALComponentBase.h			Sources)
 ze_add_source(ZEALListener.cpp				Sources)
 ze_add_source(ZEALListener.h				Sources)
-ze_add_source(ZEALModule.cpp				Sources)
-ze_add_source(ZEALModule.h					Sources)
 ze_add_source(ZEALSoundSource.cpp			Sources)
 ze_add_source(ZEALSoundSource.h				Sources)
 ze_add_source(ZEALSoundSource3D.cpp			Sources)
@@ -48,4 +48,5 @@ ze_add_source(ZEALSoundSource3D.h			Sources)
 	
 ze_add_library(TARGET ZEOpenAL 
 	SOURCES ${Sources}
+	ZEMC ${ZEMC}
 	LIBS libOpenAL)
