--- a/Source/ZEEngine/ZECore/CMakeLists.txt
+++ b/Source/ZEEngine/ZECore/CMakeLists.txt
@@ -36,9 +36,7 @@
 cmake_minimum_required (VERSION 2.8)
 
 ze_add_source(ZEApplicationModule.cpp				Sources)
-ze_add_source(ZEApplicationModule.h					Sources Headers)
-ze_add_source(ZEBase.cpp							Sources)
-ze_add_source(ZEBase.h								Sources Headers)
+ze_add_source(ZEApplicationModule.h					Sources Headers ZEMC)
 ze_add_source(ZECommand.cpp							Sources)
 ze_add_source(ZECommand.h							Sources Headers)
 ze_add_source(ZECommandManager.cpp					Sources)
@@ -53,24 +51,14 @@ ze_add_source(ZECore.cpp							Sources)
 ze_add_source(ZECore.h								Sources Headers)
 ze_add_source(ZEErrorManager.cpp					Sources)
 ze_add_source(ZEErrorManager.h						Sources Headers)
-ze_add_source(ZEExtension.cpp						Sources)
-ze_add_source(ZEExtension.h							Sources Headers)
-ze_add_source(ZEExtensionManager.cpp				Sources)
-ze_add_source(ZEExtensionManager.h					Sources Headers)
 ze_add_source(ZEModule.cpp							Sources)
-ze_add_source(ZEModule.h							Sources Headers)
-ze_add_source(ZEModuleManager.cpp					Sources)
-ze_add_source(ZEModuleManager.h						Sources Headers)
+ze_add_source(ZEModule.h							Sources Headers ZEMC)
 ze_add_source(ZEOption.cpp							Sources)
 ze_add_source(ZEOption.h							Sources Headers)
 ze_add_source(ZEOptionManager.cpp					Sources)
 ze_add_source(ZEOptionManager.h						Sources Headers)
 ze_add_source(ZEOptionSection.cpp					Sources)
 ze_add_source(ZEOptionSection.h						Sources Headers)
-ze_add_source(ZEPlugin.cpp							Sources)
-ze_add_source(ZEPlugin.h							Sources Headers)
-ze_add_source(ZEPluginManager.cpp					Sources)
-ze_add_source(ZEPluginManager.h						Sources Headers)
 ze_add_source(ZEProfiler.cpp						Sources)
 ze_add_source(ZEProfiler.h							Sources Headers)
 ze_add_source(ZEProfilerCounter.cpp					Sources)
