CHG: Classes with Destroy() members have been modified to use ZEDestroyable. ADD: ZEPhysics module classes have been modified for ZEMeta integration. CHG: ZEPhysics module classes have been modified to use ZEInitializable instead of custom initialization code. REM: ZECore ZEWindow has been removed.
svn path=/trunk/; revision=2081

--- a/Source/ZEEngine/ZEPhysics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEPhysics/CMakeLists.txt
@@ -36,23 +36,23 @@
 cmake_minimum_required (VERSION 2.8)
 
 ze_add_source(ZEPhysicalCloth.cpp				Sources)
-ze_add_source(ZEPhysicalCloth.h					Sources Headers)
+ze_add_source(ZEPhysicalCloth.h					Sources Headers ZEMC)
 ze_add_source(ZEPhysicalJoint.cpp				Sources)
-ze_add_source(ZEPhysicalJoint.h					Sources Headers)
+ze_add_source(ZEPhysicalJoint.h					Sources Headers ZEMC)
 ze_add_source(ZEPhysicalMaterial.cpp			Sources)
-ze_add_source(ZEPhysicalMaterial.h				Sources Headers)
+ze_add_source(ZEPhysicalMaterial.h				Sources Headers ZEMC)
 ze_add_source(ZEPhysicalMesh.cpp				Sources)
-ze_add_source(ZEPhysicalMesh.h					Sources Headers)
+ze_add_source(ZEPhysicalMesh.h					Sources Headers ZEMC)
 ze_add_source(ZEPhysicalObject.cpp				Sources)
-ze_add_source(ZEPhysicalObject.h				Sources Headers)
+ze_add_source(ZEPhysicalObject.h				Sources Headers ZEMC)
 ze_add_source(ZEPhysicalRigidBody.cpp			Sources)
-ze_add_source(ZEPhysicalRigidBody.h				Sources Headers)
+ze_add_source(ZEPhysicalRigidBody.h				Sources Headers ZEMC)
 ze_add_source(ZEPhysicalShapes.cpp				Sources)
-ze_add_source(ZEPhysicalShapes.h				Sources Headers)
+ze_add_source(ZEPhysicalShapes.h				Sources Headers ZEMC)
 ze_add_source(ZEPhysicalTrigger.cpp				Sources)
-ze_add_source(ZEPhysicalTrigger.h				Sources Headers)
+ze_add_source(ZEPhysicalTrigger.h				Sources Headers ZEMC)
 ze_add_source(ZEPhysicalWorld.cpp				Sources)
-ze_add_source(ZEPhysicalWorld.h					Sources Headers)
+ze_add_source(ZEPhysicalWorld.h					Sources Headers ZEMC)
 ze_add_source(ZEPhysicsModule.cpp				Sources)
 ze_add_source(ZEPhysicsModule.h					Sources Headers ZEMC)
 
