CHG: (!!!MAJOR!!!) new ZEModel design from "v0.6.3-Resource-Discontinued" branch have been merged to trunk manually. However, requires fixes to function properly. CHG: ZEModelResource class have been divided into ZEMDResources. CHG: ZEPhysics mechanisms have been removed from ZEModel and it's components. CHG: Most array member variables in ZEModel, ZEModelMesh, ZEModelMeshLOD and ZEModelBone have been converted from ZEArray to ZELink2 structure. CHG: Multi material support have been implemented, however requires further improvements for proper functionality.
svn path=/trunk/; revision=2083

--- a/Source/ZEEngine/ZEModel/CMakeLists.txt
+++ b/Source/ZEEngine/ZEModel/CMakeLists.txt
@@ -37,6 +37,8 @@ cmake_minimum_required (VERSION 2.8)
 
 ze_add_source(ZEModel.cpp					Sources)
 ze_add_source(ZEModel.h						Sources Headers ZEMC)
+ze_add_source(ZEMDVertex.cpp				Sources)
+ze_add_source(ZEMDVertex.h					Sources Headers)
 ze_add_source(ZEModelAnimation.cpp			Sources)
 ze_add_source(ZEModelAnimation.h			Sources Headers)
 ze_add_source(ZEModelAnimationTrack.cpp		Sources)
@@ -50,7 +52,7 @@ ze_add_source(ZEModelIKChainNode.h			Sources Headers)
 ze_add_source(ZEModelMesh.cpp				Sources)
 ze_add_source(ZEModelMesh.h					Sources Headers ZEMC)
 ze_add_source(ZEModelMeshLOD.cpp			Sources)
-ze_add_source(ZEModelMeshLOD.h				Sources Headers)
+ze_add_source(ZEModelMeshLOD.h				Sources Headers ZEMC)
 ze_add_source(ZEModelResource.cpp			Sources)
 ze_add_source(ZEModelResource.h				Sources Headers ZEMC)
 ze_add_source(ZEModelHelper.cpp				Sources)
@@ -58,6 +60,18 @@ ze_add_source(ZEModelHelper.h				Sources Headers ZEMC)
 ze_add_source(ZEModelDebugDrawer.cpp		Sources)
 ze_add_source(ZEModelDebugDrawer.h			Sources Headers)
 
+ze_add_source(ZEModelResource.cpp			Sources)
+ze_add_source(ZEModelResource.h				Sources Headers ZEMC)
+ze_add_source(ZEMDResourceMesh.cpp			Sources)
+ze_add_source(ZEMDResourceMesh.h			Sources Headers ZEMC)
+ze_add_source(ZEMDResourceBone.cpp			Sources)
+ze_add_source(ZEMDResourceBone.h			Sources Headers ZEMC)
+ze_add_source(ZEMDResourcePhysics.cpp		Sources)
+ze_add_source(ZEMDResourcePhysics.h			Sources Headers ZEMC)
+ze_add_source(ZEMDResourceAnimation.cpp		Sources)
+ze_add_source(ZEMDResourceAnimation.h		Sources Headers ZEMC)
+ze_add_source(ZEMDResourceHelper.cpp		Sources)
+ze_add_source(ZEMDResourceHelper.h			Sources Headers ZEMC)
 
 ze_add_library(TARGET ZEModel 
 	ZEMC ${ZEMC} 
