IMP: Generating z component from x-y components has been implemented for compressed normal maps on ZERNFixedMaterial. CHG: ZETISectorGenerator has been revised. IMP: Format definitions have been implemented for compressed formats and depth-stencil formats on ZEGRFormat. IMP: CreateFromFile function has been implemented on ZEGRTexture2D. CHG: ZERNFixedMaterial has been changed to use ZEGRTexture2D instead of ZERNMap. FIX: Resizing issue has been fixed on ZERNStageAntiAliasing. IMP: Conversion of native compressed format types has been implemented on ZED11ComponentBase.cpp. IMP: Filling subresource data has been improved to involve compressed textures on ZED11Texture2D.
svn path=/trunk/; revision=2084

--- a/Source/ZEEngine/ZEGraphics/CMakeLists.txt
+++ b/Source/ZEEngine/ZEGraphics/CMakeLists.txt
@@ -122,4 +122,4 @@ ze_add_library(TARGET ZEGraphics
 	SOURCES ${Sources}
 	HEADERS ${Headers}
 	ZEMC ${ZEMC}
-	LIBS ZEFoundation libFreeImage)
+	LIBS ZEFoundation libFreeImage libDirectXTex)
