MOD: ZEModel resource has been modified to match ZERSResource changes. CHG: ZEModelResource and it's sub classes have been refactored to ZEMDResource. MOD: Fortifications and simplifications such as adding destroy support, have been made on ZETask. Further improvements are comming. ADD: Multi-threaded destroy support has been added to ZEEntity.
svn path=/trunk/; revision=2085

--- a/Source/ZEEngine/ZEModel/CMakeLists.txt
+++ b/Source/ZEEngine/ZEModel/CMakeLists.txt
@@ -53,17 +53,19 @@ ze_add_source(ZEModelMesh.cpp				Sources)
 ze_add_source(ZEModelMesh.h					Sources Headers ZEMC)
 ze_add_source(ZEModelMeshLOD.cpp			Sources)
 ze_add_source(ZEModelMeshLOD.h				Sources Headers ZEMC)
-ze_add_source(ZEModelResource.cpp			Sources)
-ze_add_source(ZEModelResource.h				Sources Headers ZEMC)
 ze_add_source(ZEModelHelper.cpp				Sources)
 ze_add_source(ZEModelHelper.h				Sources Headers ZEMC)
 ze_add_source(ZEModelDebugDrawer.cpp		Sources)
 ze_add_source(ZEModelDebugDrawer.h			Sources Headers)
 
-ze_add_source(ZEModelResource.cpp			Sources)
-ze_add_source(ZEModelResource.h				Sources Headers ZEMC)
+ze_add_source(ZEMDResource.cpp				Sources)
+ze_add_source(ZEMDResource.h				Sources Headers ZEMC)
 ze_add_source(ZEMDResourceMesh.cpp			Sources)
 ze_add_source(ZEMDResourceMesh.h			Sources Headers ZEMC)
+ze_add_source(ZEMDResourceLOD.cpp			Sources)
+ze_add_source(ZEMDResourceLOD.h				Sources Headers ZEMC)
+ze_add_source(ZEMDResourceDraw.cpp			Sources)
+ze_add_source(ZEMDResourceDraw.h			Sources Headers ZEMC)
 ze_add_source(ZEMDResourceBone.cpp			Sources)
 ze_add_source(ZEMDResourceBone.h			Sources Headers ZEMC)
 ze_add_source(ZEMDResourcePhysics.cpp		Sources)
